// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Renderers/DateRenderer Date Range 1`] = `
<time
  dateTime={"2020-06-10T00:00:00.000Z"}
  title="2020-06-10T00:00:00+00:00"
>
  9 days
</time>
`;

exports[`Storyshots Renderers/DateRenderer Date Renderer 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  June 1, 2020
</time>
`;

exports[`Storyshots Renderers/DateRenderer Invalid Date String 1`] = `
<span>
   - 
</span>
`;

exports[`Storyshots Renderers/DateRenderer Relative 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  9 days ago
</time>
`;

exports[`Storyshots Renderers/DateRenderer Relative Negative 1`] = `
<time
  dateTime={"2020-06-10T00:00:00.000Z"}
  title="2020-06-10T00:00:00+00:00"
>
  in 9 days
</time>
`;

exports[`Storyshots Renderers/DateRenderer Relative Negative Is Null 1`] = `
<span>
   - 
</span>
`;

exports[`Storyshots Renderers/DateRenderer Time Since 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  9 days ago
</time>
`;

exports[`Storyshots Renderers/DateRenderer Using Date String 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  June 1, 2020
</time>
`;

exports[`Storyshots Renderers/DateRenderer Using Epoch 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  June 1, 2020
</time>
`;

exports[`Storyshots Renderers/DateRenderer With Overrides 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  06/01/2020
</time>
`;

exports[`Storyshots Renderers/DateRenderer With Overrides From Context 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  Monday, June 1, 2020 12:00 AM
</time>
`;
